# crawlerverse-sdks

./: .gitignore  LICENSE  README.md
.github/workflows/: python-ci.yml  python-release.yml
python/: CLAUDE.md  README.md  pyproject.toml
python/examples/: anthropic_agent.py  diagnostics.py  local_llm_agent.py  openai_agent.py
python/src/crawlerverse/: __init__.py  _base_client.py  actions.py  async_client.py  client.py  exceptions.py  models.py  runner.py  types.py
python/tests/: test_actions.py  test_async_client.py  test_async_runner.py  test_base_client.py  test_client.py  test_exceptions.py  test_models.py  test_openapi_sync.py  test_runner.py  test_types.py
